# fraud-detection

./: Dockerfile  README.md  api.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  space_app.py  tasks.py  validate.py
server/: app.py
