[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection-env"
version = "1.0.0"
description = "AI Research Integrity Officer - Scientific Fraud Detection Environment"
authors = [{name = "Your Name", email = "your@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "gradio>=3.50.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env", "models", "tasks", "server"]

[tool.uv]
dev-dependencies = []