[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection-env"
version = "1.0.0"
description = "AI Research Integrity Officer - Scientific Fraud Detection Environment"
authors = [{name = "Your Name", email = "your@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.7.2,<3.0.0",
    "pydantic>=2.7.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "gradio>=4.36.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env", "models", "tasks", "server"]

[tool.uv]
dev-dependencies = []